--- a/src/Layout/Main.css
+++ b/src/Layout/Main.css
@@ -1,13 +1,20 @@
 .main-container {
-    display: grid;
-    grid-template-columns: 350px auto;
+    display: flex;
+    position: relative;
+    /* grid-template-columns: 350px auto; */
     height: 100vh;
     background-color: #EAEDF7;
 }
 
 .off-canvas {
    background-color:#0E0E23;
+   width: 350px;
+   
 
+}
+
+.outlet-container {
+    width: 100%
 }
 
 
@@ -16,4 +23,27 @@
     width: 100%;
     height: 90vh;
     overflow-y: scroll;
+}
+.mobile-canvas {
+    display: none;
+}
+
+@media only screen and (max-width: 1250px){
+    .off-canvas {
+        display: none;
+    }
+
+    .mobile-canvas {
+        display: block;
+        width: 400px;
+        height: 100vh;
+        background-color:#0e0e23f5;
+        position: absolute;
+        z-index: 999;
+        left: -100%;
+        transition: all 700ms;
+    }
+    .active-mobile-canvas {
+        left: 0;
+    }
 }
