--- a/src/Pages/Shared/Menu/Menu.css
+++ b/src/Pages/Shared/Menu/Menu.css
@@ -73,3 +73,25 @@ nav{
     border: 2px solid red;
     box-shadow: 0 0 50px 2px red;
 }
+
+.close-mobile-menu {
+    display: none;
+    cursor: pointer;
+}
+
+
+@media only screen and (max-width: 1250px){ 
+    .close-mobile-menu {
+        color: white;
+        font-size: 22px;
+        border: 1px solid white;
+        display: inline-block;
+        padding: 2px 13px;
+        position: absolute;
+        right: 30px;
+        top: 30px;
+        display: block;
+        cursor: pointer;
+    }
+    
+}
